# parse-dockerfile

./: .clippy.toml  .cspell.json  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml  release.yml
bench/: Cargo.toml  parse.rs
fuzz/: Cargo.toml  parse.rs
fuzz/seeds/parse/: 01.Dockerfile
src/: error.rs  lib.rs  main.rs
tests/: cli.rs  external.rs  test.rs
tests/fixtures/: dev.DOCKERFILE  escaped-keyword.Dockerfile  here-doc.Dockerfile  lowercase-instruction.Dockerfile
tests/fixtures/dump/: dev.DOCKERFILE.dump.json  escaped-keyword.Dockerfile.dump.json  here-doc.Dockerfile.dump.json  lowercase-instruction.Dockerfile.dump.json
tools/: .tidy-check-license-headers  tidy.sh
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
