[package]
name = "bench"
edition = "2021"

[dev-dependencies]
parse-dockerfile = { path = "..", default-features = false }

criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", rev = "8617cd7" } # reduce deps
fs-err = "3"

# Uncomment the following dependencies and functions in benchmark files to benchmark third-party crates.
# dockerfile-parser = "0.9"

[[bench]]
name = "parse"
path = "parse.rs"
harness = false

[lints]
workspace = true
